# discord-tui

./: Cargo.toml
src/: main.rs
